--- a/jade/scss/_home.scss
+++ b/jade/scss/_home.scss
@@ -1,7 +1,7 @@
 .home-page {
   padding-bottom: 1px;
   .header {
-    z-index: 1;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
     position: fixed;
     width: 100%;
     z-index:20;
