--- a/jade/services.jade
+++ b/jade/services.jade
@@ -171,7 +171,7 @@ block main
                                 li Sed ut perspiciatis unde omnis iste natus error sit
                                 li voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
                                 li psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                              ul.image-content
+                              .image-content
                                 .carousel.slide(id='service-one-slider-mobile-#{val}' data-ride='carousel' data-interval='false')
                                   ol.carousel-indicators
                                     li.active(data-target='#service-one-slider-mobile-#{val}', data-slide-to='0')
