--- a/jade/scss/_icons.scss
+++ b/jade/scss/_icons.scss
@@ -9,7 +9,10 @@
   height: 35px;
   width: 35px;
 }
-
+[class*='-25-'] {
+  height: 25px;
+  width: 25px;
+}
 .iconsp-steel {
   background-position: 0px 0;
 }
@@ -75,9 +78,22 @@
 }
 
 .iconsp-35-phone-black {
-  background-position: -245px -80px;
+  background-position: -240px -80px;
 }
 
 .iconsp-35-phone-white {
   background-position: -280px -80px;
 }
+
+.iconsp-25-delete-black{
+  background-position: -315px -82px;
+  cursor: pointer;
+}
+.iconsp-25-delete-white{
+  background-position: -346px -84px;
+  cursor: pointer;
+}
+.iconsp-25-check-black{
+  background-position: -377px -83px;
+}
+
