--- a/jade/scss/_portfolio.scss
+++ b/jade/scss/_portfolio.scss
@@ -64,7 +64,7 @@
       background: $blue;
       display: inline-block;
       width: 370px;
-      padding: 34px 0 34px 68px;
+      padding: 34px 0 29px 68px;
       color: white;
       position: relative;
       box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.18);
@@ -84,6 +84,7 @@
         font-size: 23.56px;
         text-transform: uppercase;
         font-family: $proxima_nova_bold;
+        margin: 0;
       }
       span {
         font-family: $roboto_condensed_light;
@@ -163,7 +164,7 @@
       height: inherit !important;
     }
     .portfolio-bxslider-mobis {
-      width: 300px;
+      width: 303px;
       margin: 0 auto;
       ul {
         a {
