--- a/jade/scss/_services.scss
+++ b/jade/scss/_services.scss
@@ -182,7 +182,9 @@
         text-align: center;
         .carousel-indicators {
           bottom: 2px !important;
-          left: 77%;
+          right: 0;
+          position: absolute;
+          left: initial;
           li {
             height: 16px;
             width: 16px;
@@ -199,7 +201,7 @@
           left: 0;
           width: 100%;
           bottom: 0;
-          padding: 14px 0 24px 22px;
+          padding: 5px 10px;
           text-align: left;
           font-size: 15.33px;
           color: $white;
