--- a/jade/services.jade
+++ b/jade/services.jade
@@ -149,7 +149,8 @@ block main
           .panel.panel-default
             .panel-heading
               h4.panel-title.sub-title
-                a(data-toggle="collapse" data-parent="#accordion" href="#collapseOne") stainless steel fabrication
+                a.collapsed(data-toggle="collapse" data-parent="#accordion" href="#collapseOne") stainless steel fabrication
+                  .traingle
             #collapseOne.panel-collapse.collapse
               .panel-body
                 ul.text-content
@@ -197,24 +198,28 @@ block main
           .panel.panel-default
             .panel-heading
               h4.panel-title.sub-title
-                a(data-toggle="collapse" data-parent="#accordion" href="#collapseTwo") refrigeration
+                a.collapsed(data-toggle="collapse" data-parent="#accordion" href="#collapseTwo") refrigeration
+                  .traingle
             #collapseTwo.panel-collapse.collapse
               .panel-body
           .panel.panel-default
             .panel-heading
               h4.panel-title.sub-title
-                a(data-toggle="collapse" data-parent="#accordion" href="#collapseThree") shopfitting
+                a.collapsed(data-toggle="collapse" data-parent="#accordion" href="#collapseThree") shopfitting
+                  .traingle
             #collapseThree.panel-collapse.collapse
               .panel-body
           .panel.panel-default
             .panel-heading
               h4.panel-title.sub-title
-                a(data-toggle="collapse" data-parent="#accordion" href="#collapseFour") catering equipment
+                a.collapsed(data-toggle="collapse" data-parent="#accordion" href="#collapseFour") catering equipment
+                  .traingle
             #collapseFour.panel-collapse.collapse
               .panel-body
           .panel.panel-default
             .panel-heading
               h4.panel-title.sub-title
-                a(data-toggle="collapse" data-parent="#accordion" href="#collapseFive") design & consilation
+                a.collapsed(data-toggle="collapse" data-parent="#accordion" href="#collapseFive") design & consilation
+                  .traingle
             #collapseFive.panel-collapse.collapse
               .panel-body
