--- a/jade/scss/_layout.scss
+++ b/jade/scss/_layout.scss
@@ -320,6 +320,7 @@
         background: $blue;
         color: $white;
         text-align: center;
+        left: -43px !important;
         li {
           a {
             padding: 18px 0;
