--- a/jade/scss/_portfolio.scss
+++ b/jade/scss/_portfolio.scss
@@ -182,6 +182,10 @@
           width: 135px;
           display: inline-block;
           margin: 0 7px 12px;
+          img {
+            width: 162px;
+            height: 162px;
+          }
         }
       }
 
