--- a/jade/scss/_about-us.scss
+++ b/jade/scss/_about-us.scss
@@ -15,9 +15,15 @@
     }
     .background-before {
       transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
     }
     .background-after {
       transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
     }
     h1.title {
       margin: 80px 0 62px 0;
