Fix bug on redbooth

--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -142,7 +142,7 @@ html(lang='en')
           ul.row
             li.col-md-4
               i.iconsp-35-facebook
-              a(href="") Privacy Policy
+              a(href="http://openseed.com.au/~patragroup/") Privacy Policy
             li.col-md-5
               span Copyright © 2014 Patra Group Pty Ltd. All rights reserved.
             li.col-md-3
